--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 /* ------------------------------------------------------------------------------------------------
 
-      _  _____ _____  _    _ _____   ____  
-     | |/ ____|  __ \| |  | |  __ \ / __ \ 
-     | | |    | |  | | |  | | |__) | |  | |
- _   | | |    | |  | | |  | |  _  /| |  | |
-| |__| | |____| |__| | |__| | | \ \| |__| |
- \____/ \_____|_____/ \____/|_|  \_\\____/ 
-                                           
-                                           
+     |  ___|  __ \  |   |  _ \   _ \   
+     | |      |   | |   | |   | |   |  
+ \   | |      |   | |   | __ <  |   |  
+\___/ \____| ____/ \___/ _| \_\\___/   
+                                       
+  ___|  _ \  __ \  ____|   _ )   _ _| __ \  ____|    \     ___|  
+ |     |   | |   | __|     _ \ \   |  |   | __|     _ \  \___ \  
+ |     |   | |   | |      ( `  <   |  |   | |      ___ \       | 
+\____|\___/ ____/ _____| \___/\/ ___|____/ _____|_/    _\_____/  
 
 ------------------------------------------------------------------------------------------------ */
     body {
@@ -21,6 +22,20 @@
       gap: 20px;
       min-height: 100vh;
     }
+
+/************ HEADER ************/
+header {
+background: transparent;
+
+  color: #ffffff;
+  padding: 20px;
+  text-align: center;
+  border: 1px solid #00bfff;
+  border-radius: 14px;
+  box-shadow: 0 0 25px rgba(0, 191, 255, 0.5);
+  margin: 20px;
+}
+
 
     button {
       border: none;
